# blackbox-clients

./: .gitignore  README.md
python/: .gitignore  IDEA.md  LICENSE  README.md  demo.py  manual_test.py  manual_test_scoping.py  pyproject.toml
python/src/blackbox_python_sdk/: __init__.py  api_client.py  capture.py  config.py  decorator.py  models.py  otel_setup.py  signature.py  span_exporter.py  storage.py
python/tests/: test_decorator.py  test_scoped_names.py  test_signature.py  test_storage.py
